# mr_gemini

./: plugin_info.json  pyproject.toml
src/mr_gemini/: async_mod.py  mod.py
src/mr_gemini/override/: system.jinja2  system_original.jinja2
