[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mr_gemini"
version = "1.2.0"
authors = [
  { name="MindRoot" },
]
description = "Google Gemini LLM integration"
requires-python = ">=3.8"
dependencies = [
    "google-generativeai>=0.8.5",
    "openai>=1.77.0"
]
